Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/retail-banking/03-retail-banking-kic-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: retail-banking-kic
    istio-injection: enabled
  name: retail-banking-kic
