Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/retail-banking/04-retail-banking-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: retail-banking-team
    istio-injection: enabled
  name: retail-banking-team
