Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/retail-banking/customer-profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-profile-svc
  namespace: retail-banking-team
spec:
  # type: LoadBalancer
  selector:
    app: customer-profile-svc
  ports:
    - port: 8081
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-profile-svc
  namespace: retail-banking-team
  labels:
    app: customer-profile-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-profile-svc
  template:
    metadata:
      labels:
        app: customer-profile-svc
    spec:
      serviceAccountName: customer-profile-svc
      containers:
        - name: customer-profile-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
