Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/retail-banking/01-retail-banking-kong-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: retail-banking-kong-api-gateway
  namespace: retail-banking-kic
spec:
  gatewayClassName: retail-banking-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: retail-banking-team
